# Apple-CLI

./: AGENTS.md  Cargo.toml  README.md
src/: calendar.rs  common.rs  main.rs  messages.rs  notes.rs  reminders.rs
